plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.miniproject'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}


repositories {
	mavenCentral()
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation('org.projectlombok:lombok')
	annotationProcessor('org.projectlombok:lombok')
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation('org.projectlombok:lombok')
	testAnnotationProcessor('org.projectlombok:lombok')
}

tasks.named('test') {
	useJUnitPlatform()
}

